; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_eswitch_offloads.c_esw_offloads_load_vf_reps.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_eswitch_offloads.c_esw_offloads_load_vf_reps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_eswitch = type { i32 }

@NUM_REP_TYPES = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx5_eswitch*, i32)* @esw_offloads_load_vf_reps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @esw_offloads_load_vf_reps(%struct.mlx5_eswitch* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mlx5_eswitch*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.mlx5_eswitch* %0, %struct.mlx5_eswitch** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 0, i64* %6, align 8
  store i64 0, i64* %6, align 8
  br label %8

8:                                                ; preds = %21, %2
  %9 = load i64, i64* %6, align 8
  %10 = load i64, i64* @NUM_REP_TYPES, align 8
  %11 = icmp slt i64 %9, %10
  br i1 %11, label %12, label %24

12:                                               ; preds = %8
  %13 = load %struct.mlx5_eswitch*, %struct.mlx5_eswitch** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i64, i64* %6, align 8
  %16 = call i32 @__load_reps_vf_vport(%struct.mlx5_eswitch* %13, i32 %14, i64 %15)
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %7, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %12
  br label %26

20:                                               ; preds = %12
  br label %21

21:                                               ; preds = %20
  %22 = load i64, i64* %6, align 8
  %23 = add nsw i64 %22, 1
  store i64 %23, i64* %6, align 8
  br label %8

24:                                               ; preds = %8
  %25 = load i32, i32* %7, align 4
  store i32 %25, i32* %3, align 4
  br label %38

26:                                               ; preds = %19
  br label %27

27:                                               ; preds = %31, %26
  %28 = load i64, i64* %6, align 8
  %29 = add nsw i64 %28, -1
  store i64 %29, i64* %6, align 8
  %30 = icmp sgt i64 %28, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %27
  %32 = load %struct.mlx5_eswitch*, %struct.mlx5_eswitch** %4, align 8
  %33 = load i32, i32* %5, align 4
  %34 = load i64, i64* %6, align 8
  %35 = call i32 @__unload_reps_vf_vport(%struct.mlx5_eswitch* %32, i32 %33, i64 %34)
  br label %27

36:                                               ; preds = %27
  %37 = load i32, i32* %7, align 4
  store i32 %37, i32* %3, align 4
  br label %38

38:                                               ; preds = %36, %24
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i32 @__load_reps_vf_vport(%struct.mlx5_eswitch*, i32, i64) #1

declare dso_local i32 @__unload_reps_vf_vport(%struct.mlx5_eswitch*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
